package basenostates;


interface Observer {
    void update(Observable o, Long dateTime);
}
